; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_sntp.c_cleanup.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_sntp.c_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32, i32 }

@state = common dso_local global %struct.TYPE_3__* null, align 8
@LUA_REGISTRYINDEX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cleanup(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load %struct.TYPE_3__*, %struct.TYPE_3__** @state, align 8
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 4
  %5 = call i32 @os_timer_disarm(i32* %4)
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** @state, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 3
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @udp_remove(i32 %8)
  %10 = load i32*, i32** %2, align 8
  %11 = load i32, i32* @LUA_REGISTRYINDEX, align 4
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** @state, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @luaL_unref(i32* %10, i32 %11, i32 %14)
  %16 = load i32*, i32** %2, align 8
  %17 = load i32, i32* @LUA_REGISTRYINDEX, align 4
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** @state, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @luaL_unref(i32* %16, i32 %17, i32 %20)
  %22 = load i32*, i32** %2, align 8
  %23 = load i32, i32* @LUA_REGISTRYINDEX, align 4
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** @state, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @luaL_unref(i32* %22, i32 %23, i32 %26)
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** @state, align 8
  %29 = call i32 @free(%struct.TYPE_3__* %28)
  store %struct.TYPE_3__* null, %struct.TYPE_3__** @state, align 8
  ret void
}

declare dso_local i32 @os_timer_disarm(i32*) #1

declare dso_local i32 @udp_remove(i32) #1

declare dso_local i32 @luaL_unref(i32*, i32, i32) #1

declare dso_local i32 @free(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
